fixing warnings 2