@@ -9,8 +9,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 public class EnchantHelper {
 
     private static final List<Enchantment> customEnchantments = new ArrayList<>();
@@ -24,12 +22,12 @@ public class EnchantHelper {
     public static void register() {
         for (Enchantment enchantment : customEnchantments) {
             if (!isEnchantmentRegistered(enchantment)) {
-                registerEnchant(enchantment);
+                registerEnchant();
             }
         }
     }
 
-    public static void registerEnchant(Enchantment enchant) {
+    public static void registerEnchant() {
         try {
             Field f = Enchantment.class.getDeclaredField("acceptingNew");
             f.setAccessible(true);
@@ -42,7 +40,7 @@ public class EnchantHelper {
 
     public static boolean isEnchantmentRegistered(Enchantment enchant) {
         return Arrays.stream(Enchantment.values())
-                .collect(toList())
+                .toList()
                 .contains(enchant);
     }
 
